Adding fix with more tests